feat: add option to find cattle by earring
