# docs/swagger.json
@@ -6,7 +6,7 @@
     "paths": {
         "/cattle": {
             "get": {
-                "description": "Delete one cattle",
+                "description": "Show one cattle",
                 "consumes": [
                     "application/json"
                 ],
@@ -22,8 +22,13 @@
                         "type": "string",
                         "description": "Cattle identification",
                         "name": "id",
-                        "in": "query",
-                        "required": true
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Cattle earring",
+                        "name": "earring",
+                        "in": "query"
                     }
                 ],
                 "responses": {
